Fixed last stage and added Cache system

--- a/config/crawler.list.yaml
+++ b/config/crawler.list.yaml
@@ -16,5 +16,7 @@ muchoviaje :
       fetch: 'href'
 
     stage3:
+      # TODO: Multiple selectors?
       selector: ".precioDetalles"
       fetch: 'results'
+
