--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
       "symfony/class-loader": "2.7.*@dev",
       "pear/net_url2": "2.2.0",
       "fabpot/goutte": "2.0.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "WebCrawler\\": "src/WebCrawler"
+    }
   }
 }
