Refactoring and adding tests

--- a/src/WebCrawler/tests/IntegrationTests/integrations/YamlTest/crawler2.list.yaml
+++ b/src/WebCrawler/tests/IntegrationTests/integrations/YamlTest/crawler2.list.yaml
@@ -5,8 +5,10 @@ muchoviaje :
   url: http://www.muchoviaje.com/cruceros/CRUCEROS.ASP
   language: es
   # we'll add as new links
-  crawl: '#navieras ul a'
-  target: ".precioDetalles"
+  newurlsPattern:
+    newurls1: "#navieras ul a"
+    newurls2: ".divItinerariolink"
+  targetPattern: ".precioDetalles"
 
 #  stages:
 #
